--- a/fias/templates/fias/sphinx/sphinx.conf
+++ b/fias/templates/fias/sphinx/sphinx.conf
@@ -62,5 +62,5 @@ searchd
 
 
         # http://sphinxsearch.com/docs/2.0.6/conf-compat-sphinxql-magics.html
-        compat_sphinxql_magics = 0
+        # compat_sphinxql_magics = 0
 }
